[tool.poetry]
name = "mediacrawler"
version = "0.1.0"
description = ""
authors = ["QIN2DIM <62018067+QIN2DIM@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.44.0"
httpx = "^0.27.0"
redis = "^5.0.5"
pillow = "^10.3.0"
tenacity = "^8.3.0"
pydantic = "^2.7.3"
python-dotenv = "^1.0.1"
aiomysql = "^0.2.0"
aiofiles = "^23.2.1"
fastapi = {extras = ["all"], version = "^0.111.0"}
opencv-python = "^4.10.0.82"
pyexecjs = "^1.5.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
